syntax = "proto3";

package demo;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    // unary + error handling
    // rpc will throw an INVALID_ARGUMENT exception if the sent number is negative
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}